--- a/picothru/picothru-Info.plist
+++ b/picothru/picothru-Info.plist
@@ -9,7 +9,9 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>edu.com.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string></string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
